--- a/index.html
+++ b/index.html
@@ -4,88 +4,68 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Planogram Builder</title>
-  <link rel="stylesheet" href="styles.css?v=4" />
+  <link rel="stylesheet" href="styles.css?v=5" />
 </head>
 <body>
-  <header class="topbar">
-    <div class="brand">
-      <div class="dot"></div>
-      <div>
-        <div class="title">Planogram Builder</div>
-        <div class="subtitle">Variable sections per row</div>
-      </div>
+
+<header class="topbar">
+  <div class="brand">
+    <div class="dot"></div>
+    <div>
+      <div class="title">Planogram Builder</div>
+      <div class="subtitle">Variable sections per row</div>
+    </div>
+  </div>
+
+  <div class="controls">
+    <label>Width
+      <input id="wInput" type="number" value="800" min="200">
+    </label>
+    <label>Height
+      <input id="hInput" type="number" value="900" min="200">
+    </label>
+    <label class="layoutLabel">Row layout
+      <input id="layoutInput" type="text" value="3,3,3">
+    </label>
+
+    <button id="applyBtn" type="button">Apply</button>
+    <button id="clearBtn" type="button">Clear</button>
+  </div>
+</header>
+
+<main class="layout">
+
+  <aside class="sidebar">
+    <div class="panel">
+      <h3>Library</h3>
+
+      <input id="fileInput" type="file" accept="image/*" multiple />
+
+      <div id="library" class="library"></div>
     </div>
 
-    <div class="controls">
-      <label>Width
-        <input id="wInput" type="number" min="200" step="10" value="1240">
-      </label>
-      <label>Height
-        <input id="hInput" type="number" min="200" step="10" value="2438">
-      </label>
-      <label class="layoutLabel">Row layout
-        <input id="layoutInput" type="text" value="3,3,3,3,3,3" />
-      </label>
-
-      <button id="applyBtn" type="button">Apply</button>
-      <button id="saveBtn" type="button">Save</button>
-      <button id="loadBtn" type="button">Load</button>
-      <button id="exportBtn" type="button">Export JSON</button>
-      <button id="clearBtn" type="button" class="danger">Clear</button>
+    <div class="panel">
+      <div id="status" class="muted">Ready.</div>
+      <p class="muted">
+        • Drag items into sections<br>
+        • Double-click OR right-click to remove
+      </p>
     </div>
-  </header>
+  </aside>
 
-  <main class="layout">
-    <aside class="sidebar">
-      <div class="panel">
-        <h3>Library</h3>
-        <p class="muted">Upload images or add a URL, then drag into the plan.</p>
+  <section class="workspace">
+    <div class="workspaceHeader">
+      <div>Canvas: <span id="dimLabel">800 × 900</span></div>
+      <div>Layout: <span id="gridLabel">3,3,3</span></div>
+    </div>
 
-        <div class="row">
-          <input id="fileInput" type="file" accept="image/*" multiple />
-        </div>
+    <div class="canvasWrap">
+      <div id="canvas" class="canvas"></div>
+    </div>
+  </section>
 
-        <div class="row">
-          <input id="urlInput" type="url" placeholder="https://...image.png" />
-          <button id="addUrlBtn" type="button">Add</button>
-        </div>
+</main>
 
-        <div id="library" class="library"></div>
-      </div>
-
-      <div class="panel">
-        <h3>Status</h3>
-        <div id="status" class="muted">Loading…</div>
-      </div>
-    </aside>
-
-    <section class="workspace">
-      <div class="workspaceHeader">
-        <div class="muted">
-          Planning Space: <span id="dimLabel">1240 × 2438</span>
-        </div>
-        <div class="muted">
-          Layout: <span id="gridLabel">3,3,3,3,3,3</span>
-        </div>
-      </div>
-
-      <div class="canvasWrap">
-        <div id="canvas" class="canvas" aria-label="Planogram canvas"></div>
-      </div>
-    </section>
-  </main>
-
-  <dialog id="exportDialog" class="dialog">
-    <form method="dialog" class="dialogBody">
-      <h3>Export JSON</h3>
-      <textarea id="exportText" spellcheck="false"></textarea>
-      <div class="dialogActions">
-        <button id="copyBtn" type="button">Copy</button>
-        <button type="submit">Close</button>
-      </div>
-    </form>
-  </dialog>
-
-  <script src="app.js?v=4"></script>
+<script src="app.js?v=5"></script>
 </body>
 </html>
